@@ -1,4 +1,10 @@
 {
+	"jack": {
+		"label": "JACK:",
+		"off": "ВЫКЛ",
+		"on": "ВКЛ"
+	},
+	
 	"load": {
 		"error": "Ошибка",
 		"load": "Загр",
