@@ -74,6 +74,12 @@
 				<label ui:id="trg_font_zoom_out" font.name="lsp-icons" hover="true" color="footer_icon_rsz" hover.color="footer_icon_rsz_hover" padding.right="5" expand="false" font.size="10" font.antialias="true" text="C" pointer="hand"/>
 			</hbox>
 			<void expand="true"/>
+			<!-- Jack status -->
+			<hbox ui:id="jack_indicator" visibility="false" spacing="6">
+				<label text="statuses.jack.label" ui:inject="PluginWindow::StatusBar::Label" />
+				<label ui:id="jack_status" text="statuses.jack.off" ui:inject="PluginWindow::StatusBar::Label" />
+			</hbox>
+			<void width="12" />
 			<!-- help icon -->
 			<label ui:id="trg_plugin_manual" font.name="lsp-icons" hover="true" color="footer_icon_rsz" hover.color="menu_icon_hover" padding.right="6" font.size="12" font.antialias="true" text="6" halign="1" pointer="hand"/>
 
